--- a/package.json
+++ b/package.json
@@ -39,14 +39,14 @@
     "web-vitals": "^4.2.2",
     "xlsx": "^0.18.5"
   },
+  "main": "main.js",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run backend\" \"npm run frontend\"",
+    "backend": "node server.js",
+    "frontend": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "preinstall": "npx npm-force-resolutions"
+    "electron-dev": "concurrently \"npm run backend\" \"electron .\"",
+    "electron-build": "electron-builder"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9",
@@ -74,7 +74,26 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "anymatch": "^3.1.3",
     "chokidar": "^3.6.0",
+    "concurrently": "^9.1.0",
+    "electron": "^33.2.1",
+    "electron-builder": "^25.1.8",
     "gh-pages": "^6.1.1",
     "micromatch": "^4.0.7"
+  },
+  "build": {
+    "appId": "com.pso.dash",
+    "productName": "PSO Dash",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "build/**/*",
+      "main.js",
+      "server.js"
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "public/icon.ico"
+    }
   }
 }
